--- a/site/index.html
+++ b/site/index.html
@@ -14,12 +14,12 @@
          
         
     </style>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 	<h1 id="h1">OUR MENU</h1>
 	<section class="box col-lg-4 col-md-6 col-sd-12" >
-		<h2 class="p">chicken</h2>
+		<h2 id="l1" class="p">Chicken</h2>
 	    <p class="p1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -29,7 +29,7 @@
 	    </p>
 	</section>
 	<section class="box col-lg-4 col-md-6 col-sd-12">
-		<h2 class="p">cake</h2>
+		<h2 id="l2" class="p">Cake</h2>
 	    <p class="p1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -39,7 +39,7 @@
 	    </p>
 	</section>
 	<section class="box col-lg-4 col-md-12 col-sd-12">
-		<h2 class="p">Ice-creams</h2>
+		<h2 id="l3" class="p">Ice-cream</h2>
 	    <p class="p1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
